@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3687 2003/10/13 15:52:40 wiz Exp $
+$NetBSD: CHANGES,v 1.3688 2003/10/13 15:55:11 veego Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4193,3 +4193,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated xpmroot to 2.4.17 [martti 2003-10-13]
 	Updated fvwm2 to 2.4.17 [martti 2003-10-13]
 	Updated gone to 1.3.5 [wiz 2003-10-13]
+	Updated x11-links to 0.16 [veego 2003-10-13]
